--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Streamdata Gallery
+title: Streamdata Gallery Transportation
 url: transportation.streamdata.gallery
 tag: Transportation
 markdown: kramdown
